--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="container mt-5">
             <div class="row text-center">
-                <p>Escolha o seu Kit</p>
+                <p>Escolha o seu Kit aqui.</p>
             </div>
         </div>
         
