--- a/kit_loreal_dpgp.html
+++ b/kit_loreal_dpgp.html
@@ -36,17 +36,26 @@
             <table class="table table-striped table-bordered table-hover" id="dados_loreal_dpgp_ouro">
                 <thead>
                     <tr >
-                        <th id="tab-loreal_dpgp_ouro" colspan="3">KIT OURO</th>
+                        <th id="tab-loreal_dpgp_ouro" colspan="4">KIT OURO</th>
                     </tr>
                     <tr>
-                        <th class="col-small" id="tab_colunas">CÓDIGO</th>
+                        <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
-                        <th class="col-small" id="tab_colunas">QUANTIDADE</th>
+                        <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO</th>
                     </tr>
                 </thead>
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th colspan="4"><span style="font-family: FuturaBold;">Obs: </span>os itens 9598 e 15841 são obrigatórios.</th>
+                    </tr>
+                    <tr >
+                        <th colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 26278 e 26925 possuem a quantidade máxima de pack por kit.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -60,10 +69,10 @@
         <!--PROPOSTA-->
         <div class="row">
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 4.500,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 8.000,00</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 10 itens</div>
+                <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
             </div>
         </div>
 
@@ -76,21 +85,14 @@
 
         <!--CONDIÇÕES-->
         <div class="row lh-1">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>15% DE DESCONTO</p><p>07/01/2024<br>04/02/2024<br>04/03/2024</p></div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
-                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
-                    <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>15% DE DESCONTO</p><p>04/02/2024</p></div>
+                  </svg></p><p>15% DE DESCONTO</p><p>04/02/2025</p></div>
             </div>
         
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
@@ -117,12 +119,13 @@
             <table class="table table-striped table-bordered table-hover" id="dados_loreal_dpgp_prata">
                 <thead>
                     <tr >
-                        <th id="tab-loreal_dpgp_prata" colspan="3">KIT PRATA</th>
+                        <th id="tab-loreal_dpgp_prata" colspan="4">KIT PRATA</th>
                     </tr>
                     <tr>
-                        <th class="col-small" id="tab_colunas">CÓDIGO</th>
+                        <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
-                        <th class="col-small" id="tab_colunas">QUANTIDADE</th>
+                        <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO</th>
                     </tr>
                 </thead>
                 <tbody>
