--- a/kit_loreal_dpgp.html
+++ b/kit_loreal_dpgp.html
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <!--BOTÃO ANÁLISE DE CRÉDITO-->
+        <!--CONDIÇÕES DE PAGAMENTO-->
         <div class="row">
             <div class="col-12">
                 <div class="p-3 mb-2 condicoes_pagamento">Condições de pagamento</div>
@@ -152,7 +152,7 @@
             </div>
         </div>
 
-        <!--BOTÃO ANÁLISE DE CRÉDITO-->
+        <!--CONDIÇÕES DE PAGAMENTO-->
         <div class="row">
             <div class="col-12">
                 <div class="p-3 mb-2 condicoes_pagamento">Condições de pagamento</div>
@@ -228,6 +228,13 @@
         <div class="row">
             <div class="col-12">
                 <div class="p-3 mb-2 bg-warning">PEDIDO SUJEITO A ANÁLISE DE CRÉDITO</div>
+            </div>
+        </div>
+
+        <!--CONDIÇÕES DE PAGAMENTO-->
+        <div class="row">
+            <div class="col-12">
+                <div class="p-3 mb-2 condicoes_pagamento">Condições de pagamento</div>
             </div>
         </div>
 
