--- a/kit_integral_medica.html
+++ b/kit_integral_medica.html
@@ -36,12 +36,14 @@
             <div class="col-md-12">
                 <div id="tab-integral_medica" class="p-1 mb-2 rounded">KIT PERFORMANCE FIT</div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 800,00</div>
             </div>
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
-            </div>
+            </div> -->
+            <div class="col-md-2"></div>
         </div>
 
         <div class="fonte_tabela table-responsive">
@@ -107,12 +109,14 @@
             <div class="col-md-12">
                 <div id="tab-integral_medica" class="p-1 mb-2 rounded">KIT PERFORMANCE PLUS</div>
             </div>
-            <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 800,00</div>
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 1.200,00</div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <!-- <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
-            </div>
+            </div> -->
         </div>
 
         <div class="fonte_tabela table-responsive">
