--- a/kit_loreal_dpgp_rj.html
+++ b/kit_loreal_dpgp_rj.html
@@ -24,7 +24,7 @@
                 <div class="col-12">
                     <img class="img-fluid logo mb-5" src="images/logo.svg" alt="Verão Gama 2024">
                     <h1 class="lh-1">Combos Verão Gama</h1>
-                    <h2>Aproveite! Compre agora e comece a pagar somente em 2025!</h2>
+                    <h2>Sua farmácia preparada, seus clientes protegidos.</h2>
                 </div>
             </div>
         </div>
