--- a/kit_loreal_dpgp_mg.html
+++ b/kit_loreal_dpgp_mg.html
@@ -68,7 +68,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. Os itens 26278 e 26925 possuem a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. Os itens 26278 e 26925 possuem a quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -148,7 +148,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -227,7 +227,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
