--- a/kit_loreal_dpgp_rj.html
+++ b/kit_loreal_dpgp_rj.html
@@ -68,7 +68,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui quantidade máxima de pack por kit, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -94,14 +94,14 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>15% DE DESCONTO</p><p>07/01/2025<br>04/02/2025</p></div>
+                  </svg></p><p>15% DE DESCONTO</p><p>09/12/2024<br>07/01/2025</p></div>
             </div>
 
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>15% DE DESCONTO</p><p>07/01/2025</p></div>
+                  </svg></p><p>15% DE DESCONTO</p><p>09/12/2024</p></div>
             </div>
         </div>
 
