--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <a href="kit_moskitoff.html" class="btn-custom btn-2">
-                        <img src="images/logo_moskitoff.svg" alt="Moskitoff">
+                    <a href="kit_scjohnson.html" class="btn-custom btn-2">
+                        <img src="images/logo_scjohnson.svg" alt="SC Johnson">
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
