--- a/kit_scjohnson.html
+++ b/kit_scjohnson.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_negrarosa_hair">
+            <table class="table table-striped table-bordered table-hover" id="dados_scjohnson">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
