--- a/kit_scjohnson.html
+++ b/kit_scjohnson.html
@@ -24,7 +24,7 @@
         <div>
             <div class="row mt-5">
                 <div class="col-12">
-                    <img class="img-fluid integral_medica mb-3" src="images/logo_scjohnson.svg" alt="SC Johnson">
+                    <img class="img-fluid logo_fornecedor mb-3" src="images/logo_scjohnson.svg" alt="SC Johnson">
                 </div>
             </div>
         </div>
@@ -91,11 +91,6 @@
         
         </div>
 
-    </div>
-
-    <!-- SEPARADOR -->
-    <div class="separator-text">
-        <img src="images/separador.svg" alt="Separador"> <!-- SVG ao invés do texto -->
     </div>
 
     <!-- SEPARADOR -->
