--- a/kit_sunless.html
+++ b/kit_sunless.html
@@ -20,11 +20,11 @@
             
         <div id="header-placeholder"></div>
     
-        <!-- MARCA FORNECEDOR -->
+        <!-- MARCA PRODUTO -->
         <div>
             <div class="row mt-5">
                 <div class="col-12">
-                    <img class="img-fluid logo_fornecedor mb-3" src="images/logo_farmax.svg" alt="Sunless">
+                    <img class="img-fluid logo_fornecedor mb-3" src="images/logo_sunless.svg" alt="Sunless">
                     <p>Aproveite as ofertas e começe a pagar somente em 2025!</p>
                 </div>
             </div>
@@ -254,6 +254,17 @@
     <!-- SEPARADOR -->
     <div class="separator-text">
         <img src="images/separador.svg" alt="Separador"> <!-- SVG ao invés do texto -->
+    </div>
+
+    <!-- MARCA FORNECEDOR -->
+    <div class="container text-center">
+        <div>
+            <div class="row mt-5">
+                <div class="col-12">
+                    <p>Um produto <img class="img-fluid logo_footer mb-3" src="images/logo_farmax.svg" alt="Sunless"></p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Botão para voltar à página inicial -->
