--- a/kit_australian_gold.html
+++ b/kit_australian_gold.html
@@ -20,11 +20,11 @@
         
         <div id="header-placeholder"></div>
        
-        <!-- MARCA FORNECEDOR -->
+        <!-- MARCA PRODUTO -->
         <div>
             <div class="row mt-5">
                 <div class="col-12">
-                    <img class="img-fluid logo_boticario mb-3" src="images/logo_grupo_boticario.svg" alt="Grupo Boticario">
+                    <img class="img-fluid logo_australian_gold mb-3" src="images/logo_australian_gold.svg" alt="Grupo Boticario">
                 </div>
             </div>
         </div>
@@ -55,6 +55,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Ganhe 15% bonificado.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -129,6 +134,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Ganhe 10% bonificado.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -170,6 +180,17 @@
     <!-- SEPARADOR -->
     <div class="separator-text">
         <img src="images/separador.svg" alt="Separador"> <!-- SVG ao invés do texto -->
+    </div>
+
+    <!-- MARCA FORNECEDOR -->
+    <div class="container text-center">
+        <div>
+            <div class="row mt-5">
+                <div class="col-12">
+                    <p>Um produto <img class="img-fluid logo_footer_boticario mb-3" src="images/logo_grupo_boticario.svg" alt="Sunless"></p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Botão para voltar à página inicial -->
