--- a/kit_australian_gold.html
+++ b/kit_australian_gold.html
@@ -32,7 +32,7 @@
         <!--CABEÇALHO-->
         <div class="row">
             <div class="col-md-12">
-                <div id="tab-australian_gold_esmeralda" class="p-1 mb-2 rounded">KIT AUSTRALIAN GOLD ESMERALDA <span class="sub-titulo-tabela"> (Mix Sugerido)</span></div>
+                <div id="tab-australian_gold_esmeralda" class="p-1 mb-2 rounded">KIT ESMERALDA <span class="sub-titulo-tabela"> (Mix Sugerido)</span></div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 1.500,00</div>
@@ -111,7 +111,7 @@
         <!--CABEÇALHO-->
         <div class="row">
             <div class="col-md-12">
-                <div id="tab-australian_gold_topazio" class="p-1 mb-2 rounded">KIT AUSTRALIAN GOLD TOPÁZIO <span class="sub-titulo-tabela"> (Mix Sugerido)</span></div>
+                <div id="tab-australian_gold_topazio" class="p-1 mb-2 rounded">KIT TOPÁZIO <span class="sub-titulo-tabela"> (Mix Sugerido)</span></div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 900,00</div>
