--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <a href="kit_loreal_lbd.html" class="btn-custom btn-6">
-                        <img src="images/logo_loreal_lbd.svg" alt="Loreal LBD">
+                    <a href="kit_loreal_lbd.html" class="btn-custom loreal_lbd btn-6">
+                        <img src="images/logo_vichy_laroche.svg" alt="Loreal LBD">
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
