--- a/kit_loreal_lbd.html
+++ b/kit_loreal_lbd.html
@@ -131,6 +131,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são obrigatórios no kit.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
