Alterações de tamanho de texto e ícone

--- a/kit_loreal_dpgp.html
+++ b/kit_loreal_dpgp.html
@@ -59,7 +59,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. Os itens 26278 e 26925 possuem a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white fs-5" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. Os itens 26278 e 26925 possuem a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -139,7 +139,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white fs-5" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -218,7 +218,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
+                        <th class="bg-danger text-white fs-5" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens 9598 e 15841 são obrigatórios. O item 26925 possui a quantidade máxima de pack por kit. Lembrando que os packs não entram no desconto, favor enviar a quantidade de promopack na observação do pedido.</th>
                     </tr>
                 </thead>
             </table>
