--- a/kit_loreal_lbd.html
+++ b/kit_loreal_lbd.html
@@ -58,7 +58,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são obrigatórios no kit.</th>
+                        <th class="bg-danger text-white fs-4" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são obrigatórios no kit.</th>
                     </tr>
                 </thead>
             </table>
@@ -133,7 +133,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são obrigatórios no kit.</th>
+                        <th class="bg-danger text-white fs-4" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são obrigatórios no kit.</th>
                     </tr>
                 </thead>
             </table>
