--- a/kit_cenoura_bronze.html
+++ b/kit_cenoura_bronze.html
@@ -49,7 +49,7 @@
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
                         <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
-                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 10% DESC.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -124,7 +124,7 @@
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
                         <th class="col-large" id="tab_colunas">PRODUTO</th>
                         <th class="col-thin" id="tab_colunas">QUANT. SUGERIDA</th>
-                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO</th>
+                        <th class="col-small" id="tab_colunas">VALOR UNITÁRIO<br>COM 7% DESC.</th>
                     </tr>
                 </thead>
                 <tbody>
