--- a/kit_australian_gold.html
+++ b/kit_australian_gold.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_australian_gold_esmeralda">
+            <table class="table table-striped table-bordered table-hover" id="dados_australian_gold_esmeralda_">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
@@ -84,7 +84,7 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>07/01/2025<br>07/02/2025</p></div>
+                  </svg></p><p>07/01/2025<br>07/02/2025</p><p>COD PLANO 1167</p></div>
             </div>
 
             <div class="col-md-6">
@@ -92,7 +92,7 @@
                     <path d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518z"/>
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                     <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11m0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12"/>
-                  </svg></p>1,2% de desconto para pagamento à vista.</div>
+                  </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1168</p></div>
             </div>
         
         </div>
@@ -111,7 +111,7 @@
                 <!-- Coluna da Legenda (Textos alinhados à esquerda) -->
                 <div class="col-md-7 text-start">
                     <h4 class="custom-heading">BRINDES ESPECIAIS</h4>
-                    <p class="custom-paragraph">02 copos Stanley.</p>
+                    <p class="custom-paragraph">02 copos térmicos.</p>
                 </div>
 
                 <div class="col-md-1"></div>
@@ -186,7 +186,7 @@
                 <div class="p-3 mb-2 bg-light condicoes_box"><p><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
                     <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                  </svg></p><p>07/01/2025</p></div>
+                  </svg></p><p>07/01/2025</p><p>COD PLANO 1165</p></div>
             </div>
 
             <div class="col-md-6">
@@ -194,7 +194,7 @@
                     <path d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518z"/>
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                     <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11m0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12"/>
-                  </svg></p>1,2% de desconto para pagamento à vista.</div>
+                  </svg></p><p>1,2% de desconto para pagamento à vista.</p><p>COD PLANO 1166</p></div>
             </div>
         
         </div>
@@ -213,7 +213,7 @@
                 <!-- Coluna da Legenda (Textos alinhados à esquerda) -->
                 <div class="col-md-7 text-start">
                     <h4 class="custom-heading">BRINDES ESPECIAIS</h4>
-                    <p class="custom-paragraph">01 copo Stanley.</p>
+                    <p class="custom-paragraph">01 copo térmico.</p>
                 </div>
 
                 <div class="col-md-1"></div>
