--- a/kit_sunless_es_mix.html
+++ b/kit_sunless_es_mix.html
@@ -29,7 +29,7 @@
     <!-- KIT MAR -->
     <div class="container text-center">
 
-        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/es.svg" alt="Verão Gama 2024">Espírito Santo</span></h2>
+        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/es.svg" alt="Verão Gama 2024">Espírito Santo +Mix</span></h2>
     
         <!-- MARCA PRODUTO -->
         <div>
