--- a/kit_sunless_mg.html
+++ b/kit_sunless_mg.html
@@ -29,7 +29,7 @@
     <!-- KIT MAR -->
     <div class="container text-center">
 
-        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/mg.svg" alt="Verão Gama 2024">Minas Gerais</span></h2>
+        <h2 class="abaixa"><span class="estados"><img class="img-fluid logo mb-5" src="images/es.svg" alt="Verão Gama 2024">Espírito Santo</span></h2>
     
         <!-- MARCA PRODUTO -->
         <div>
@@ -47,7 +47,7 @@
                 <div id="tab-sunless_mar" class="p-1 mb-2 rounded">KIT MAR</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 4.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 3.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 12 itens distintos</div>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_sunless_mar_mg">
+            <table class="table table-striped table-bordered table-hover" id="dados_sunless_mar_es">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
@@ -130,7 +130,7 @@
                 <div id="tab-sunless_sol" class="p-1 mb-2 rounded">KIT SOL</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 3.000,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 2.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 09 itens distintos</div>
@@ -138,7 +138,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_sunless_sol_mg">
+            <table class="table table-striped table-bordered table-hover" id="dados_sunless_sol_es">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
@@ -205,7 +205,7 @@
                 <div id="tab-sunless_areia" class="p-1 mb-2 rounded">KIT AREIA</div>
             </div>
             <div class="col-md-6">
-                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 1.500,00</div>
+                <div class="p-3 mb-2 bg-success valor_quantidade text-white rounded"><i class="bi bi-coin"></i> Valor estimado: R$ 1.000,00</div>
             </div>
             <div class="col-md-6">
                 <div class="p-3 mb-2 bg-info valor_quantidade text-white rounded"><i class="bi bi-bag-check-fill"></i> Quantidade mínima: 06 itens distintos</div>
@@ -213,7 +213,7 @@
         </div>
 
         <div class="fonte_tabela table-responsive">
-            <table class="table table-striped table-bordered table-hover" id="dados_sunless_areia_mg">
+            <table class="table table-striped table-bordered table-hover" id="dados_sunless_areia_es">
                 <thead>
                     <tr>
                         <th class="col-thin" id="tab_colunas">CÓDIGO</th>
