--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                         <img src="images/logo_cenoura_bronze.svg" alt="Cenoura e Bronze">
                     </a>
                 </div>
+                <div class="col-md-4 mb-4">
+                    <a href="rede_soma.html" class="btn-custom btn-10">
+                        <img src="images/logo_rede_soma.png" alt="Cenoura e Bronze">
+                    </a>
+                </div>
             </div>
         </div>
 
