Alterações BA Sunless

--- a/kit_sunless_ba.html
+++ b/kit_sunless_ba.html
@@ -67,6 +67,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks, e o item 18088 tem quantidade máxima de 16 unidades.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -145,6 +150,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks, e o item 18088 tem quantidade máxima de 12 unidades.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -215,6 +225,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks, e o item 18088 tem quantidade máxima de 06 unidades.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
