--- a/kit_sunless_rj.html
+++ b/kit_sunless_rj.html
@@ -66,6 +66,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks, e o item 18088 tem quantidade máxima de 16 unidades.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -144,6 +149,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks, e o item 18088 tem quantidade máxima de 12 unidades.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
@@ -214,6 +224,11 @@
                 <tbody>
                     <!-- AQUI ESTÃO OS DADOS DAS TABELAS -->
                 </tbody>
+                <thead>
+                    <tr >
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks, e o item 18088 tem quantidade máxima de 06 unidades.</th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
