--- a/kit_sunless_es_mix.html
+++ b/kit_sunless_es_mix.html
@@ -67,7 +67,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks. O item 18088 tem quantidade máxima de 24 unidades, informe na observação do pedido no ion vendas a quantidade desejada, para que o Apoio a Vendas envie junto ao pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>O item 18088 tem quantidade máxima de 24 unidades, informe na observação do pedido no ion vendas a quantidade desejada, para que o Apoio a Vendas envie junto ao pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -149,7 +149,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks. O item 18088 tem quantidade máxima de 18 unidades, informe na observação do pedido no ion vendas a quantidade desejada, para que o Apoio a Vendas envie junto ao pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>O item 18088 tem quantidade máxima de 18 unidades, informe na observação do pedido no ion vendas a quantidade desejada, para que o Apoio a Vendas envie junto ao pedido.</th>
                     </tr>
                 </thead>
             </table>
@@ -223,7 +223,7 @@
                 </tbody>
                 <thead>
                     <tr >
-                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>Os itens em negrito são promopacks. O item 18088 tem quantidade máxima de 12 unidades, informe na observação do pedido no ion vendas a quantidade desejada, para que o Apoio a Vendas envie junto ao pedido.</th>
+                        <th class="bg-danger text-white" colspan="4"><span style="font-family: FuturaBold;">Obs: </span>O item 18088 tem quantidade máxima de 12 unidades, informe na observação do pedido no ion vendas a quantidade desejada, para que o Apoio a Vendas envie junto ao pedido.</th>
                     </tr>
                 </thead>
             </table>
