--- a/kit_loreal_dpgp_ba.html
+++ b/kit_loreal_dpgp_ba.html
@@ -98,6 +98,8 @@
             <div class="col-md-3"></div>
         </div>
 
+        <p>Ofertas válidas de 23/09/2024 a 27/09/2024 ou enquanto durarem os estoques.<br>Planos de pagamento em até 35 dias, sujeitos à aprovação de crédito.</p>
+
     </div>
 
     <!-- SEPARADOR -->
