--- a/header_combos.html
+++ b/header_combos.html
@@ -5,7 +5,7 @@
             <a href="index.html"><img class="img-fluid logo_combos mb-5" src="images/logo.svg" alt="Verão Gama 2024"></a>
             <h1 class="lh-1">Combos Verão Gama</h1>
             <h2>Sua farmácia preparada, seus clientes protegidos.</h2>
-            <h3>Ofertas válidas até 30 de setembro</h3>
+            <h3>Ofertas válidas de 20 a 30 de setembro</h3>
         </div>
     </div>
 </div>
